--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "rx": "^4.1.0",
-    "swiper": "^11.1.4"
+    "swiper": "^11.1.4",
+    "use-media": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
