--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-lazyload": "^3.2.1",
     "rx": "^4.1.0",
     "swiper": "^11.1.4",
     "use-media": "^1.5.0"
@@ -22,6 +23,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-lazyload": "^3.2.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
