--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.10.3",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-lazyload": "^3.2.1",
     "rx": "^4.1.0",
     "swiper": "^11.1.4",
@@ -24,6 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-lazy-load-image-component": "^1.6.4",
     "@types/react-lazyload": "^3.2.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
